--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,18 +6,18 @@ on:
       ssh_user:
         description: "The SSH username"
         required: true
+        default: 'client_62733a344a'
       ssh_password:
         description: "The SSH password"
         required: true
       remote_host:
         description: "The remote host (IP or domain)"
         required: true
+        default: 'j6o.b29.myftpupload.com'
       remote_dir:
         description: "The remote directory where the files will be synchronized"
         required: true
-      repo_path:
-        description: "The path to the repository"
-        required: true
+        default: '/home/client_62733a344a/html/test/'
 
 jobs:
   deploy:
@@ -48,7 +48,6 @@ jobs:
           REMOTE_DIR: ${{ github.event.inputs.remote_dir }}
         run: |
           # Use sshpass to run rsync with password authentication
-          sshpass -p "$SSH_PASSWORD" rsync -avz --delete ./ "$SSH_USER"@"$REMOTE_HOST":"$REMOTE_DIR"
-          sshpass -p "$SSH_PASSWORD" rsync -avz -e "ssh -o StrictHostKeyChecking=no" --delete ./ "$SSH_USER"@"$REMOTE_HOST":"$REMOTE_DIR"
+          sshpass -p "$SSH_PASSWORD" rsync -avz --delete --exclude='.git' ./ "$SSH_USER"@"$REMOTE_HOST":"$REMOTE_DIR"
 
           
