--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,6 @@ on:
         description: "The SSH username"
         required: true
         default: 'client_62733a344a'
-      ssh_password:
-        description: "The SSH password"
-        required: true
       remote_host:
         description: "The remote host (IP or domain)"
         required: true
@@ -24,5 +21,5 @@ jobs:
         uses: narethiya-godaddy/git-deploy-poc@v0.0.1
         with:
           ssh_user: ${{ github.event.inputs.ssh_user }}
-          ssh_password: ${{ github.event.inputs.ssh_password }}
+          ssh_password: ${{secrets.DEPLOYER_PASSWORD}}
           remote_host: ${{ github.event.inputs.remote_host }}
